--- a/src/styles/Spinner.css
+++ b/src/styles/Spinner.css
@@ -1,3 +1,11 @@
+ .container{
+   
+   display: flex;
+   width: 100vw;
+   height: 100vh;
+   align-items: center;
+   justify-content: center;
+ }
 .sk-cube-grid {
     width: 40px;
     height: 40px;
